<resources>
    <string name="app_name">Ruleta</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="seleccionar_idioma">Seleccionar idioma:</string>

    <string name="txt1Historial">Game History</string>
    <string name="txt1Apuesta">Bet</string>
    <string name="txt1Premio">Prize</string>
    <string name="txt1Resultado">Result</string>
    <string name="txt1TotalMonedas">Total Coins</string>
    <string name="txt1Retirarse">Back</string>

    <string name="txt2IniciarSesión">Log In</string>
    <string name="txt2Salir">Exit</string>
    <string name="txt2Opciones">Options</string>
    <string name="txt2Ayuda">Help</string>

    <string name="txt3IniciarPartida">Start Game</string>
    <string name="txt3VerResultados">View Results</string>
    <string name="txt3ReiniciarMonedas">Restart</string>
    <string name="txt3Salir">Exit</string>

    <string name="txt4Musica">Select Music</string>
    <string name="txt4Volver">Back</string>
    <string name="txt4Desactivar">Turn Off Background Music</string>
    <string name="txt4Idioma">Language</string>

    <string name="txt5Apostado">Your Bet:</string>
    <string name="txt5Tienes">Now you have:</string>
    <string name="txt5Volver">New Roll</string>
    <string name="txt5Retirarse">Exit</string>

    <string name="txt6Apostar">How much do you want to bet?</string>
    <string name="txt6Tirar">Roll</string>
    <string name="txt6Retirarse">Exit</string>

    <string name="txt9Apuesta">Bet</string>
    <string name="txt9Premio">Prize</string>
    <string name="txt9Resultado">Result</string>
    <string name="txt9Total">Total Coins</string>
    <string name="txtaTiradas">Rolls obtained successfully: %d</string>
    <string name="txtaHistorial">No roll history available</string>
    <string name="txtaError">Error retrieving roll history</string>

    <string name="txtcIniciarSesion">Log In</string>
    <string name="txtcIngresaNombreUsuario">Enter your username:</string>
    <string name="txtcAceptar">Accept</string>
    <string name="txtcCancelar">Cancel</string>
    <string name="txtcNombreUsuario">Username</string>

    <string name="txteTituloReiniciarMonedas">Reset Coins</string>
    <string name="txteMensajeReiniciarMonedas">Are you sure you want to reset your coins to 100?</string>
    <string name="txteAceptar">Yes</string>
    <string name="txteCancelar">No</string>
    <string name="txteMonedasReiniciadas">Coins reset to 100.</string>
    <string name="txteErrorReiniciarMonedas">Error resetting coins.</string>

    <string name="txthImagenGuardada">Image saved to gallery.</string>
    <string name="txthErrorGuardarImagen">Error saving image: </string>
    <string name="txthHasGanado">You have won:</string>
    <string name="txthHasPerdido">You have lost:</string>

    <string name="txtiApuestaInvalida">Invalid bet. It must be between 10 and %1$d</string>
    <string name="txtiNumeroValido">Please enter a valid number.</string>
    <string name="txtiIntroduceValorApuesta">Please enter a bet value.</string>

    <string name="txtiEnhorabuena">x10 Congratulations!</string>
    <string name="txtiBienHecho">x2 Well done</string>
    <string name="txtiMalaSuerte">/5 What bad luck!</string>
    <string name="txtiQuiebra">Bankruptcy! What bad luck!</string>
    <string name="txtiNoEstaMal">x1.5 Not bad</string>
    <string name="txtiPudoSerPeor">/2 Could have been worse</string>
    <string name="txtiGenial">x5 Great!</string>
    <string name="txtiEsAlgo">/1.5 It\'s something</string>
    <string name="txtiAlgoHaIdoMal">Something went wrong!</string>

    <string name="txtRNoPermiso">Permission %1$s denied</string>
    <string name="txtRSiPermiso">Permission %1$s granted</string>

    <string name="event_title">Victory for %1$s</string>
    <string name="event_description">%1$s has obtained %2$d coins spinning the roulette.</string>
    <string name="event_added_to_calendar">Event added to your calendar</string>
    <string name="error_adding_event_to_calendar">There was an error adding the event to your calendar</string>
    <string name="url_help_page">https://sites.google.com/uoc.edu/apparchitects/ayuda/help</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
</resources>