<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#20001D"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="415dp"
        android:layout_height="642dp"
        app:layout_constraintBottom_toTopOf="@+id/btnInicioSesion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.494"
        app:srcCompat="@drawable/ruleta"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnInicioSesion"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:backgroundTint="#20001D"
        android:text="@string/txt2IniciarSesión"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#FFB800"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#20001D"
        android:text="@string/txt2Salir"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAyuda"
        app:strokeColor="#FFB800"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnAyuda"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="#20001D"
        android:text="@string/txt2Ayuda"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnOpciones"
        app:strokeColor="#FFB800"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btnOpciones"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#20001D"
        android:text="@string/txt2Opciones"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnInicioSesion"
        app:strokeColor="#FFB800"
        app:strokeWidth="2dp" />


</androidx.constraintlayout.widget.ConstraintLayout>