<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20001D">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Icono de Usuario -->

        <!-- Nombre de Usuario -->

        <ImageView
            android:id="@+id/MonedaTotal1"
            android:layout_width="35dp"
            android:layout_height="34dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/moneda" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="25dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/textUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/imageView3"
            app:layout_constraintStart_toEndOf="@id/imageView3"
            app:layout_constraintTop_toTopOf="@id/imageView3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtMonedasTotales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/MonedaTotal1"
            app:layout_constraintEnd_toStartOf="@+id/MonedaTotal1"
            app:layout_constraintTop_toTopOf="@+id/MonedaTotal1"
            app:layout_constraintVertical_bias="1.0" />

        <!-- Moneda -->

        <!-- Total de Monedas -->

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt1Historial"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textViewApuesta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt1Apuesta"/>

        <TextView
            android:id="@+id/textViewPremio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt1Premio" />

        <TextView
            android:id="@+id/textViewResultado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt1Resultado" />

        <TextView
            android:id="@+id/textViewTotalMonedas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/txt1TotalMonedas" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="405dp"
        android:layout_height="467dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btnRetirarse"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#20001D"
        android:text="@string/txt1Retirarse"
        app:cornerRadius="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="#FFB800"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="664dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
