<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#20001D"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Opciones">

    <Switch
        android:id="@+id/switchMusic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/txt4Desactivar"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/languageOptions"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/btnSelectMusic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/txtIdioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            android:text="@string/txt4Idioma"
            android:textColor="@color/white"
            android:textSize="24sp"
            />



        <Button
            android:id="@+id/buttonEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="English"
            app:cornerRadius="0dp"
            app:strokeColor="#FFB800"
            app:strokeWidth="2dp"
            android:backgroundTint="#20001D"/>

        <Button
            android:id="@+id/buttonSpanish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Español"
            app:cornerRadius="0dp"
            app:strokeColor="#FFB800"
            app:strokeWidth="2dp"
            android:backgroundTint="#20001D"/>

        <Button
            android:id="@+id/buttonCatalan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="Català"
            app:cornerRadius="0dp"
            app:strokeColor="#FFB800"
            app:strokeWidth="2dp"
            android:backgroundTint="#20001D"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnSelectMusic"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#20001D"
        android:text="@string/txt4Musica"
        app:cornerRadius="0dp"
        app:strokeColor="#FFB800"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/switchMusic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnVolver"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="#20001D"
        android:text="@string/txt4Volver"
        app:cornerRadius="0dp"
        app:strokeColor="#FFB800"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toBottomOf="@id/languageOptions"
        app:layout_constraintStart_toStartOf="@id/btnSelectMusic"
        app:layout_constraintEnd_toEndOf="@id/btnSelectMusic" />

</androidx.constraintlayout.widget.ConstraintLayout>
