<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#20001D"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Icono de Usuario -->
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="25dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user" />

        <!-- Nombre de Usuario -->
        <TextView
            android:id="@+id/textUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/imageView3"
            app:layout_constraintBottom_toBottomOf="@id/imageView3"
            app:layout_constraintTop_toTopOf="@id/imageView3" />

        <!-- Moneda -->
        <ImageView
            android:id="@+id/MonedaTotal1"
            android:layout_width="35dp"
            android:layout_height="34dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/moneda" />

        <!-- Total de Monedas -->
        <TextView
            android:id="@+id/txtMonedasTotales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/MonedaTotal1"
            app:layout_constraintTop_toTopOf="@+id/MonedaTotal1"
            app:layout_constraintBottom_toBottomOf="@+id/MonedaTotal1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="415dp"
        android:layout_height="642dp"
        app:layout_constraintBottom_toTopOf="@+id/btnIniciarPartida"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345"
        app:srcCompat="@drawable/ruleta"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnIniciarPartida"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="448dp"
        android:backgroundTint="#20001D"
        android:text="@string/txt3IniciarPartida"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#FFB800"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnResultados"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#20001D"
        android:text="@string/txt3VerResultados"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIniciarPartida"
        app:strokeColor="#FFB800"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnReiniciarMonedas"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#20001D"
        android:text="@string/txt3ReiniciarMonedas"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnResultados"
        app:strokeColor="#FFB800"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#20001D"
        android:text="@string/txt3Salir"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnReiniciarMonedas"
        app:strokeColor="#FFB800"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>