<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20001D"
    tools:context=".Tirada">

    <TextView
        android:id="@+id/txtApostar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="480dp"
        android:backgroundTint="#20001D"
        android:text="@string/txt6Apostar"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <!-- Icono de Usuario -->

        <!-- Nombre de Usuario -->

        <ImageView
            android:id="@+id/MonedaTotal1"
            android:layout_width="35dp"
            android:layout_height="34dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/moneda" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="25dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/user" />

        <TextView
            android:id="@+id/textUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@id/imageView3"
            app:layout_constraintStart_toEndOf="@id/imageView3"
            app:layout_constraintTop_toTopOf="@id/imageView3"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/txtMonedasTotales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/MonedaTotal1"
            app:layout_constraintEnd_toStartOf="@+id/MonedaTotal1"
            app:layout_constraintTop_toTopOf="@+id/MonedaTotal1"
            app:layout_constraintVertical_bias="1.0" />

        <!-- Moneda -->

        <!-- Total de Monedas -->

    </androidx.constraintlayout.widget.ConstraintLayout>


    <Button
        android:id="@+id/btnRetirarse"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:backgroundTint="#20001D"
        android:text="@string/txt6Retirarse"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApostar"
        app:strokeColor="#FFB800"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnTirar"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:backgroundTint="#20001D"
        android:text="@string/txt6Tirar"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApostar"
        app:strokeColor="#FFB800"
        app:strokeWidth="2dp"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextNumber3"
        android:layout_width="135dp"
        android:layout_height="58dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:gravity="center"
        android:inputType="number"
        android:text="10"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApostar" />

    <ImageView
        android:id="@+id/MonedaTotal2"
        android:layout_width="34dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toEndOf="@+id/editTextNumber3"
        app:layout_constraintTop_toBottomOf="@+id/txtApostar"
        app:srcCompat="@drawable/moneda2" />

    <ImageView
        android:id="@+id/Ruleta"
        android:layout_width="354dp"
        android:layout_height="389dp"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rulet" />

    <ImageView
        android:id="@+id/Pointer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/Ruleta"
        app:layout_constraintEnd_toEndOf="@id/Ruleta"
        app:layout_constraintStart_toStartOf="@id/Ruleta"
        app:layout_constraintTop_toTopOf="@id/Ruleta"
        app:layout_constraintVertical_bias="0.414"
        app:srcCompat="@drawable/pointer" />


</androidx.constraintlayout.widget.ConstraintLayout>